feat(config): enhance application configuration for CORS and data seeding